add scss folder, gitignore file and create scss file

--- a/Template/scss/_variable.scss
+++ b/Template/scss/_variable.scss
@@ -1,1 +1,17 @@
-$badass: #bada55;
+$bg_white: #ffffff;
+$bg_1: #ee4248;
+$welcome_bg: #f6f6f6;
+
+$f_white: #ffffff;
+$fc_1: #1f2e35;
+$fc_2: #30444e;
+$fc_3: #ee4248;
+$fc_4: #263238;
+$li_color: #1f2e35cc;
+
+$font_family_1: "Roboto Mono", monospace;
+$font_family_2: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+$fw_bold_1: 700;
+$fw_bold_2: 500;
