--- a/Template/assets/css/main.css
+++ b/Template/assets/css/main.css
@@ -1,4 +1,200 @@
 body {
-  margin: 0;
-  background-color: #bada55;
-}
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; }
+
+/*  header  */
+header {
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25); }
+  @media (max-width: 767.98px) {
+    header {
+      box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.25); } }
+  header li {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21px;
+    color: #1f2e35cc; }
+  header .btn {
+    background-color: #ee4248;
+    color: #ffffff;
+    border-radius: 4px;
+    background-color: #ffffff;
+    border: none; }
+  header .dropdown-toggle::after {
+    display: inline-block;
+    margin-left: 0.355em;
+    vertical-align: 0.155em;
+    content: url("../images/icons/arrow_down.png");
+    border: none; }
+  header .navbar-toggler-icon {
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    background-image: url("../images/icons/text_align_right.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%; }
+  header .navbar-toggler {
+    border: none;
+    padding-right: 0.5rem; }
+  header .navbar-toggler:focus {
+    box-shadow: none; }
+
+/*  blog  */
+.blog h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 64.17px;
+  color: #1f2e35; }
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    .blog h1 {
+      font-size: 34px;
+      font-weight: 500;
+      line-height: 45.45px; } }
+  @media (max-width: 767.98px) {
+    .blog h1 {
+      font-size: 34px;
+      font-weight: 500;
+      line-height: 45.45px; } }
+
+.blog p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  color: #30444e;
+  font-size: 20px;
+  line-height: 29px; }
+
+.blog .btn {
+  background-color: #ee4248;
+  color: #ffffff;
+  border-radius: 4px;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
+  padding: 12px 32px;
+  font-size: 20px; }
+
+@media (max-width: 767.98px) {
+  .blog img {
+    padding: 0px 18px; } }
+
+/* welcome  */
+.welcome {
+  background-color: #f6f6f6; }
+  .welcome h2 {
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 42.78px;
+    color: #1f2e35; }
+  .welcome p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #30444e; }
+    @media (min-width: 768px) and (max-width: 991.98px) {
+      .welcome p {
+        padding-left: 12px; } }
+    @media (max-width: 767.98px) {
+      .welcome p {
+        padding-left: 12px; } }
+  .welcome img {
+    width: 440px;
+    height: 395px; }
+    @media (min-width: 992px) and (max-width: 1199.98px) {
+      .welcome img {
+        width: 427px;
+        height: 437px; } }
+    @media (min-width: 768px) and (max-width: 991.98px) {
+      .welcome img {
+        width: 430px;
+        height: 405.54px; } }
+    @media (max-width: 767.98px) {
+      .welcome img {
+        width: 367px;
+        height: 350.54px; } }
+
+/*  product service  */
+.productservice h2 {
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 42.78px;
+  color: #1f2e35; }
+
+.productservice h3 {
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 37.43px;
+  color: #ee4248; }
+
+.productservice img {
+  width: 100px;
+  height: 100px; }
+
+.productservice p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  color: #30444e;
+  min-height: 108px;
+  max-width: 329px; }
+  @media (min-width: 992px) and (max-width: 1199.98px) {
+    .productservice p {
+      min-height: 135px; } }
+  @media (min-width: 768px) and (max-width: 991.98px) {
+    .productservice p {
+      max-width: 359px; } }
+  @media (max-width: 767.98px) {
+    .productservice p {
+      max-width: 359px; } }
+
+.productservice .btn {
+  background-color: #ee4248;
+  color: #ffffff;
+  border-radius: 4px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+  padding: 8px 16px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 26.04px; }
+
+/* footer  */
+.footer {
+  color: #263238; }
+  .footer h4 {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 28.13px; }
+  .footer p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #30444e; }
+  .footer .title {
+    font-weight: 500; }
+  .footer .details {
+    font-weight: 300; }
+  @media (max-width: 767.98px) {
+    .footer .silverlight {
+      width: 121.35px;
+      height: 34.92px; }
+    .footer .dotnet {
+      width: 120.03px;
+      height: 41.66px; }
+    .footer .java {
+      width: 91.17px; }
+    .footer .ios {
+      width: 69.78px; }
+    .footer .android {
+      width: 145.54px; }
+    .footer .blackberry {
+      width: 145.54px; } }
+
+/*  copyright  */
+.copyright {
+  background-color: #ee4248; }
+  .copyright p {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #30444e;
+    color: #ffffff;
+    font-size: 18px;
+    line-height: 21px; }
