--- a/Template/assets/css/main.css
+++ b/Template/assets/css/main.css
@@ -71,6 +71,8 @@ header {
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
   padding: 12px 32px;
   font-size: 20px; }
+  .blog .btn:hover {
+    background-color: #cc5f63; }
 
 @media (max-width: 767.98px) {
   .blog img {
