--- a/Template/scss/main.scss
+++ b/Template/scss/main.scss
@@ -43,6 +43,9 @@ header {
     @include box-shadow(1px 2px, 4px);
     padding: 12px 32px;
     font-size: 20px;
+    &:hover{
+      background-color: $bg_hover;
+    }
   }
   @media (max-width: 767.98px) {
     img {
