--- a/Template/assets/css/main.css
+++ b/Template/assets/css/main.css
@@ -57,12 +57,10 @@ header {
       line-height: 45.45px; } }
 
 .blog p {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 27px;
-  color: #30444e;
   font-size: 20px;
-  line-height: 29px; }
+  font-weight: 400;
+  line-height: 29px;
+  color: #30444e; }
 
 .blog .btn {
   background-color: #ee4248;
@@ -195,8 +193,6 @@ header {
   .copyright p {
     font-size: 18px;
     font-weight: 400;
-    line-height: 27px;
+    line-height: 21px;
     color: #30444e;
-    color: #ffffff;
-    font-size: 18px;
-    line-height: 21px; }
+    color: #ffffff; }
