--- a/Template/scss/_mixin.scss
+++ b/Template/scss/_mixin.scss
@@ -35,10 +35,10 @@
   line-height: 28.13px;
 }
 
-@mixin pbase {
-  font-size: 18px;
+@mixin pbase($size: 18px, $height: 27px) {
+  font-size: $size;
   font-weight: 400;
-  line-height: 27px;
+  line-height: $height;
   color: $fc_2;
 }
 
